--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
         </div>
         <div class="person-card">
           <img src="images/natalie.jpg" alt="">
-          <h4>ナタリーポートマン</h4>
+          <h4>ナタリー・ポートマン</h4>
           <p>言わずと知れたマチルダです。大人になってもすごく綺麗で好きです。</p>
         </div>
         <div class="person-card">
           <img src="images/robert.jpg" alt="">
-          <h4>ロバートパティンソン</h4>
+          <h4>ロバート・パティンソン</h4>
           <p>TENETを見て、特にスーツ姿に惚れました。自分も将来はあんな風に一張羅で颯爽と歩きたいです。(*1)</p>
         </div>
         <div class="person-card">
