--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <link rel="stylesheet" href="style/stylesheet.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-  <script src="script/main.js" defer></script>
 </head>
 
 <body>
@@ -25,7 +24,7 @@
   <div class="hero" id="top">
 
     <div class="title">
-      <h1>ようこそ、大塚遥輝の自己紹介サイトへ</h1>
+      <h1><span>ようこそ、</span>大塚遥輝の自己紹介サイトへ</h1>
       <p>Hello, Welcome!</p>
     </div>
     <div class="scroll-box">
@@ -53,29 +52,32 @@
         </div>
         <p><span class="normal-font">2000</span>年生まれ、滋賀県出身で現在は東京大学の美術史学科に在籍しています。普段は大学の勉強の他に、プログラミングとWEBデザインの勉強、そしてサイト運営（<a class="link" href="https://pokeyobi.jp">ポケット予備校</a>）などを行っています。カナダと中国（北京系）と日本のハーフです。</p>
       </div>
-      <div class="hobbies-mini">
-        <h3>さらに詳しく</h3>
-        <ul>
-          <li>趣味</li>
-          <li>好きな映画、曲、本</li>
-          <li>好きな人</li>
-          <li>将来の夢</li>
-          <li>など...</li>
-        </ul>
-        <a href="#who-am-i" class="link-black">Who am I<i class="fas fa-arrow-down"></i></a>
+      <div class="flex-horizontal">
+        <div class="hobbies-mini">
+          <h3>さらに詳しく</h3>
+          <ul>
+            <li>趣味</li>
+            <li>好きな映画、曲、本</li>
+            <li>好きな人</li>
+            <li>将来の夢</li>
+            <li>など...</li>
+          </ul>
+          <a href="#who-am-i" class="link-black">Who am I<i class="fas fa-arrow-down"></i></a>
+        </div>
+        <div class="skills-mini">
+          <h3>スキル</h3>
+          <ul>
+            <li>HTML / CSS (Sass)</li>
+            <li>Photoshop</li>
+            <li>Illustrator...</li>
+            <li class="bold">勉強中</li>
+            <li>Javascript</li>
+            <li>After effect...</li>
+          </ul>
+          <a href="#skills" class="link-black">Skills<i class="fas fa-arrow-down"></i></a>
+        </div>
       </div>
-      <div class="skills-mini">
-        <h3>スキル</h3>
-        <ul>
-          <li>HTML / CSS (Sass)</li>
-          <li>Photoshop</li>
-          <li>Illustrator...</li>
-          <li class="bold">勉強中</li>
-          <li>Javascript</li>
-          <li>After effect...</li>
-        </ul>
-        <a href="#skills" class="link-black">Skills<i class="fas fa-arrow-down"></i></a>
-      </div>
+
     </div>
   </div>
   </div>
@@ -142,12 +144,12 @@
         </div>
         <div class="person-card">
           <img src="images/natalie.jpg" alt="">
-          <h4>ナタリー・ポートマン</h4>
+          <h4>ナタリーポートマン</h4>
           <p>言わずと知れたマチルダです。大人になってもすごく綺麗で好きです。</p>
         </div>
         <div class="person-card">
           <img src="images/robert.jpg" alt="">
-          <h4>ロバート・パティンソン</h4>
+          <h4>ロバートパティンソン</h4>
           <p>TENETを見て、特にスーツ姿に惚れました。自分も将来はあんな風に一張羅で颯爽と歩きたいです。(*1)</p>
         </div>
         <div class="person-card">
