--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2DS09E77TG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2DS09E77TG');
+</script>
   <meta charset="utf-8">
   <title>大塚遥輝の紹介サイト</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
