--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <meta property="og:description" content="ようこそ、大塚遥輝の自己紹介サイトへ！このサイトで大塚遥輝のことをもっと知ろう！">
   <meta property="og:image" content="https://otsuka-haruki.github.io/portfolio_1/images/me_ogp.jpg">
 
-  <link rel="stylesheet" href="style/destyle.css">
-  <link rel="stylesheet" href="style/stylesheet.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@2.0.2/destyle.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+  <link rel="stylesheet" href="style/stylesheet.css">
   <link rel="icon" href="images/icon.png">
 </head>
 
