--- a/index.html
+++ b/index.html
@@ -3,32 +3,46 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2DS09E77TG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2DS09E77TG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'G-2DS09E77TG');
-</script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-2DS09E77TG');
+  </script>
+
   <meta charset="utf-8">
   <title>大塚遥輝の紹介サイト</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta property="og:url" content="https://https://otsuka-haruki.github.io/portfolio_1/">
   <meta property="og:title" content="大塚遥輝の自己紹介サイト">
-  <meta property="og:description" content="ようこそ、大塚遥輝の自己紹介サイトへ！このサイトで大塚遥輝のことをもっと知ろう！">
-  <meta property="og:image" content="https://otsuka-haruki.github.io/portfolio_1/images/me_ogp.jpg">
+  <meta property="og:description" content="ようこそ、大塚遥輝の自己紹介サイトへ！このページでは大塚遥輝の情報をまとめて掲載しています！">
+  <meta property="og:image" content="./assets/images/me_ogp.jpg">
+
+  <link rel="icon" type="image/png" href="./assets/images/favicon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon.png">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@2.0.2/destyle.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-  <link rel="stylesheet" href="style/stylesheet.css">
-  <link rel="icon" href="images/icon.png">
+  <link rel="stylesheet" href="./assets/styles/stylesheet.min.css">
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="./index.js" defer type="module"></script>
 </head>
 
 <body>
+  <div id="cover">
+    <p>Loaded!!</p>
+  </div>
   <div class="icon">
-    <a href="#top"><img src="images/icon.png" alt="icon"></a>
+    <a href="#top"><img src="./assets/images/favicon.png" alt="icon"></a>
   </div>
 
   <div class="hero" id="top">
@@ -53,7 +67,7 @@
       <h2>About</h2>
     </div>
     <div class="image-box">
-      <img src="images/me.jpg" alt="myself">
+      <img src="./assets/images/me.jpg" alt="myself">
     </div>
     <div class="intro-series">
       <div class="about">
@@ -106,7 +120,8 @@
           <p>自粛中に映画をたくさん観るようになってから、本格的に映画鑑賞が趣味になりました。異なる世界に入り込める魅力は映画ならではのものだと思います。ハッピー！みたいな映画ももちろん好きですが、深い人間物語の映画の方が心に響きますよね。<br>好きな映画はGod FatherやLEON、RAWなどです。</p>
           <div class="images-box">
             <a target="_blank" href="https://www.amazon.co.jp/gp/product/B07F5S2H13/ref=as_li_tl?ie=UTF8&camp=247&creative=1211&creativeASIN=B07F5S2H13&linkCode=as2&tag=pokeyobi-22&linkId=8fdcb6d01a2e7a7b79fea9e409536712"><img
-                src="https://ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=JP&ASIN=B07F5S2H13&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=pokeyobi-22"></a> </div>
+                src="https://ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=JP&ASIN=B07F5S2H13&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=pokeyobi-22"></a>
+          </div>
         </div>
         <div class="hobby-card">
           <h4>音楽を聴く</h4>
@@ -143,27 +158,27 @@
       <h3>好きな人</h3>
       <div class="person-cards">
         <div class="person-card">
-          <img src="images/carsar.jpg" alt="">
+          <img src="./assets/images/carsar.jpg" alt="">
           <h4>カエサル</h4>
           <p>なんといっても稀代の英雄として尊敬しています。この堂々たる風格に憧れを感じます。</p>
         </div>
         <div class="person-card">
-          <img src="images/mutsu.jpg" alt="">
+          <img src="./assets/images/mutsu.jpg" alt="">
           <h4>陸奥宗光</h4>
           <p>カミソリと言われた頭脳で日本を発展させた点が好きです。盛衰を決めるのは頭脳なのだ、と学んだ人です。</p>
         </div>
         <div class="person-card">
-          <img src="images/natalie.jpg" alt="">
+          <img src="./assets/images/natalie.jpg" alt="">
           <h4>ナタリーポートマン</h4>
           <p>言わずと知れたマチルダです。大人になってもすごく綺麗で好きです。</p>
         </div>
         <div class="person-card">
-          <img src="images/robert.jpg" alt="">
+          <img src="./assets/images/robert.jpg" alt="">
           <h4>ロバートパティンソン</h4>
           <p>TENETを見て、特にスーツ姿に惚れました。自分も将来はあんな風に一張羅で颯爽と歩きたいです。(*1)</p>
         </div>
         <div class="person-card">
-          <img src="images/dilraba.jpg" alt="">
+          <img src="./assets/images/dilraba.jpg" alt="">
           <h4>ディリラバ</h4>
           <p>ウイグル出身の中国の女優ですが、アジアともヨーロッパともつかない、独特の整った顔つきで、本当に綺麗。(*2)</p>
         </div>
@@ -243,6 +258,14 @@
       </div>
     </div>
   </div>
+
+  <div class="progress-wrap">
+		<svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+			<path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98"/>
+      <i class="fas fa-arrow-up" id="progress-wrap-arrow"></i>
+		</svg>
+	</div>
+
   <div class="footer">
 
     <div class="information">
