about and cover animation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       dataLayer.push(arguments);
     }
     gtag('js', new Date());
-
     gtag('config', 'G-2DS09E77TG');
   </script>
 
@@ -26,20 +25,50 @@
   <link rel="icon" type="image/png" href="./assets/images/favicon.png">
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon.png">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@2.0.2/destyle.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <!-- TODO: google fonts into one link -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif&text=0123456789&display=swap">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/styles/stylesheet.min.css">
 
+  <script>
+    (function(d) {
+      var config = {
+          kitId: 'kqy0yom',
+          scriptTimeout: 3000,
+          async: true
+        },
+        h = d.documentElement,
+        t = setTimeout(function() {
+          h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive";
+        }, config.scriptTimeout),
+        tk = d.createElement("script"),
+        f = false,
+        s = d.getElementsByTagName("script")[0],
+        a;
+      h.className += " wf-loading";
+      tk.src = 'https://use.typekit.net/' + config.kitId + '.js';
+      tk.async = true;
+      tk.onload = tk.onreadystatechange = function() {
+        a = this.readyState;
+        if (f || a && a != "complete" && a != "loaded") return;
+        f = true;
+        clearTimeout(t);
+        try {
+          Typekit.load(config)
+        } catch (e) {}
+      };
+      s.parentNode.insertBefore(tk, s)
+    })(document);
+  </script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="./index.js" defer type="module"></script>
 </head>
 
 <body>
-
   <!-- アイコン -->
 
   <div class="icon">
@@ -62,7 +91,7 @@
   <!-- トップページ -->
 
   <div class="hero row" id="top">
-    <div class="title col s12">
+    <div class="title col s12 l12">
       <h1><span>ようこそ、</span>大塚遥輝の自己紹介サイトへ</h1>
       <p>Hello, Welcome!</p>
     </div>
@@ -79,15 +108,53 @@
 
   <!-- トップページ -->
 
-  <!-- <div class="row hw100">
+  <div class="row" id="about">
+    <div class="section-title white">
+      <h2>About</h2>
+    </div>
     <div class="col l3 grey lighten-1">
-      <img src="./assets/images/me-circle.jpg" alt="">
+      <div>
+        <h5>Skills</h5>
+        <ul>
+          <li>プログラミング</li>
+          <li>Wordpress</li>
+          <li>ライティング</li>
+        </ul>
+      </div>
+      <!-- <img src="./assets/images/me-circle.jpg" alt="image-of-myself"> -->
     </div>
     <div class="col l9 white">
-      <h2>大塚遥輝</h2>
+      <h3 class="center-align">大塚 遥輝</h3>
+      <div>
+        <h5>Profile</h5>
+        <p>私は東京大学の2年生で、文学部の美術史学科に所属しています。普段は大学の勉強の他に、プログラミングとWEBデザインの勉強、そしてサイト運営（<a class="link" href="https://pokeyobi.jp">ポケット予備校</a>）などを行っています。日本と中国（北京系）とカナダとのハーフです。</p>
+      </div>
+      <div>
+        <h5>経歴</h5>
+        <p>2000年に滋賀県で生まれ、大学進学を機に東京にやって来ました。</p>
+      </div>
+      <div>
+        <h5>職歴など</h5>
+        <p>2015年ごろからFXを始めました。15万円から初めて、2年くらいゆっくりと続けて17万円を超えるくらいになりました。</p>
+        <p>2017年ごろ 学校の前で塾などが消しゴム入りのパンフレットを配っていたので、それを貯めてリサイクルショップで売ってお金を稼ぎました。１つ10円くらいでした。</p>
+        <p>2019 大学進学後は、家庭教師といった典型的なアルバイトだけでなく、建築現場や夜間の倉庫などのお仕事も10件ほどやりました。</p>
+        <p>2020 WEBサイト「ポケット予備校」を始めてからはアドセンス広告やアマゾンアフィリエイトなどで収入を作るようになりました。</p>
+        <p>2021 プログラミングや簡単なWEBデザインの技術をつけてからは、友人から依頼を受けて細かな作業をこなしたりしています。一例として家計簿アプリを作ったり、旅行写真をPhotoshopで証明写真用の画像に加工したりしていくらかのお金を頂いたりしています。</p>
+      </div>
+      <div>
+        <h5>過去の活動や取材歴</h5>
+        <p>2017年 エコノミクス甲子園 全国大会準々決勝進出</p>
+        <p>2018年 テレビ東京 モーニングサテライト 出演</p>
+        <p>2020年 東京大学新聞 企画「キャンパスの人」に取り上げられました</p>
+      </div>
+      <div>
+        <h5>資格など</h5>
+        <p>2015年 TOEIC825点</p>
+        <p>2021年 基礎情報技術者試験（勉強中）</p>
+      </div>
     </div>
-  </div> -->
-
+  </div>
+<!--
   <div class="about" id="about">
     <div class="section-title">
       <h2>About</h2>
@@ -100,7 +167,7 @@
         <div class="intro-series-h3">
           <h3>私について</h3>
         </div>
-        <p><span class="normal-font">2000</span>年生まれ、滋賀県出身で現在は東京大学の美術史学科に在籍しています。普段は大学の勉強の他に、プログラミングとWEBデザインの勉強、そしてサイト運営（<a class="link" href="https://pokeyobi.jp">ポケット予備校</a>）などを行っています。カナダと中国（北京系）と日本のハーフです。</p>
+        <p><span class="normal-font">2000</span>年生まれ、滋賀県出身で現在は東京大学の美術史学科に在籍しています。</p>
       </div>
       <div class="flex-horizontal">
         <div class="hobbies-mini">
@@ -129,8 +196,76 @@
       </div>
 
     </div>
+  </div> -->
+
+  <!-- トップページ -->
+
+  <!-- 実績 -->
+
+  <!-- 実績 -->
+
+  <!-- スキル -->
+  <div class="skills" id="skills">
+    <div class="section-title">
+      <h2>Skills</h2>
+    </div>
+    <div class="learned">
+      <div class="skill_cards">
+        <div class="skill_card">
+          <h4>HTML/CSS</h4>
+          <p>HTMLとCSSを、HTMQとMDNのサイトを使って独学で勉強しました。CSSについては基本的にSass（なかでもScss）を使って書いています。</p>
+          <a href class="a-button">このサイトのソースコード</a>
+        </div>
+        <div class="skill_card">
+          <h4>Photoshop</h4>
+          <p>PhotoshopVIPというサイトに掲載されているチュートリアルで勉強しました。私が作った作品などはIllustratorを使った作品とまとめてありますのでご覧ください。</p>
+        </div>
+      </div>
+      <div class="skill_cards">
+        <div class="skill_card">
+          <h4>Illustrator</h4>
+          <p>同じくPhotoshopVIPというサイトに掲載されているチュートリアルで勉強しました。私が作った作品などはPhotoshopを使った作品とまとめてありますのでご覧ください。</p>
+          <a href class="a-button">私が作った作品一覧</a>
+        </div>
+        <div class="skill_card">
+          <h4>WEBサイト運営</h4>
+          <p>受験生を応援するWEBメディア、<a class="link" href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer">ポケット予備校</a>を運営しています。（サムネイル画像は全て私が作成しています）</p>
+          <a href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer" class="a-button">サイトへ</a>
+        </div>
+      </div>
+    </div>
+    <div class="learning">
+      <h3>勉強中、または勉強予定</h3>
+      <div class="skill_cards">
+        <div class="skill_card">
+          <h4>JavaScript</h4>
+          <p>Udemyを使ってJavaScriptを独学で勉強しています。jqueryまで勉強する予定です。</p>
+        </div>
+        <div class="skill_card">
+          <h4>After Effect</h4>
+          <p>モーショングラフィックも好きなので、After Effectも勉強する予定です。</p>
+        </div>
+      </div>
+      <div class="skill_cards">
+        <div class="skill_card">
+          <h4>Swift</h4>
+          <p>スマホのアプリを作るのは大学生活の夢の一つで、JavaScriptの次に勉強しようと思っています。</p>
+        </div>
+        <div class="skill_card">
+          <h4>中国語</h4>
+          <p>ネイティブとスムーズに会話できるように中国語を勉強しています。</p>
+        </div>
+      </div>
+    </div>
   </div>
+
+  <div class="progress-wrap">
+    <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+      <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
+      <i class="fas fa-arrow-up" id="progress-wrap-arrow"></i>
+    </svg>
   </div>
+  <!-- スキル -->
 
   <!-- より詳しい自己紹介のページ -->
 
@@ -229,93 +364,26 @@
     </div>
   </div>
 
-  <!-- スキル紹介のページ -->
-
-  <div class="skills" id="skills">
-    <div class="section-title">
-      <h2>Skills</h2>
-    </div>
-    <div class="learned">
-      <div class="skill_cards">
-        <div class="skill_card">
-          <h4>HTML/CSS</h4>
-          <p>HTMLとCSSを、HTMQとMDNのサイトを使って独学で勉強しました。CSSについては基本的にSass（なかでもScss）を使って書いています。</p>
-          <a href class="a-button">このサイトのソースコード</a>
-        </div>
-        <div class="skill_card">
-          <h4>Photoshop</h4>
-          <p>PhotoshopVIPというサイトに掲載されているチュートリアルで勉強しました。私が作った作品などはIllustratorを使った作品とまとめてありますのでご覧ください。</p>
-        </div>
-      </div>
-      <div class="skill_cards">
-        <div class="skill_card">
-          <h4>Illustrator</h4>
-          <p>同じくPhotoshopVIPというサイトに掲載されているチュートリアルで勉強しました。私が作った作品などはPhotoshopを使った作品とまとめてありますのでご覧ください。</p>
-          <a href class="a-button">私が作った作品一覧</a>
-        </div>
-        <div class="skill_card">
-          <h4>WEBサイト運営</h4>
-          <p>受験生を応援するWEBメディア、<a class="link" href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer">ポケット予備校</a>を運営しています。（サムネイル画像は全て私が作成しています）</p>
-          <a href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer" class="a-button">サイトへ</a>
-        </div>
-      </div>
-    </div>
-    <div class="learning">
-      <h3>勉強中、または勉強予定</h3>
-      <div class="skill_cards">
-        <div class="skill_card">
-          <h4>JavaScript</h4>
-          <p>Udemyを使ってJavaScriptを独学で勉強しています。jqueryまで勉強する予定です。</p>
-        </div>
-        <div class="skill_card">
-          <h4>After Effect</h4>
-          <p>モーショングラフィックも好きなので、After Effectも勉強する予定です。</p>
-        </div>
-      </div>
-      <div class="skill_cards">
-        <div class="skill_card">
-          <h4>Swift</h4>
-          <p>スマホのアプリを作るのは大学生活の夢の一つで、JavaScriptの次に勉強しようと思っています。</p>
-        </div>
-        <div class="skill_card">
-          <h4>中国語</h4>
-          <p>ネイティブとスムーズに会話できるように中国語を勉強しています。</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="progress-wrap">
-    <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
-      <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
-      <i class="fas fa-arrow-up" id="progress-wrap-arrow"></i>
-    </svg>
-  </div>
-
-
   <!-- フッター -->
 
-  <div class="footer">
-    <div class="information">
-      <h3>大塚遥輝</h3>
-    </div>
-    <div class="nav">
+  <footer class="page-footer">
+    <div class="container">
+      <h5 class="white-text center-align">大塚遥輝</h5>
+      <h5 class="white-text">Links</h5>
       <ul>
-        <li><a href="#">Top</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#who-am-i">Who am I</a></li>
-        <li><a href="#skills">Skills</a></li>
+        <li><a class="white-text" href="#">Top</a></li>
+        <li><a class="white-text" href="#about">About</a></li>
+        <li><a class="white-text" href="#who-am-i">Who am I</a></li>
+        <li><a class="white-text" href="#skills">Skills</a></li>
       </ul>
-    </div>
-    <div class="thanks-message">
       <p>Thanks for your time!</p>
     </div>
-    <div class="cc">
-      <p>注意書き</p>
-      <p>*1:©︎ Maximilian Bühn, 2017, <a class="link" href="https://creativecommons.org/licenses/by-sa/4.0/">CC表示ー継承4.0</a>. *2:©︎ VOGUE Taiwan, 2019, <a class="link" href="https://creativecommons.org/licenses/by/3.0/">CC表示3.0</a>.
-        著作権を侵害せずに画像を使うために一部の画像をAmazonのAffiliateからリンクを貼っています。</p>
+    <div class="footer-copyright">
+      <div class="container center-align">
+        <p>© 2021 大塚遥輝</p>
+      </div>
     </div>
-  </div>
+  </footer>
 
   <!-- フッター -->
 
