--- a/index.html
+++ b/index.html
@@ -154,49 +154,6 @@
       </div>
     </div>
   </div>
-<!--
-  <div class="about" id="about">
-    <div class="section-title">
-      <h2>About</h2>
-    </div>
-    <div class="image-box">
-      <img src="./assets/images/me.webp" alt="myself">
-    </div>
-    <div class="intro-series">
-      <div class="about">
-        <div class="intro-series-h3">
-          <h3>私について</h3>
-        </div>
-        <p><span class="normal-font">2000</span>年生まれ、滋賀県出身で現在は東京大学の美術史学科に在籍しています。</p>
-      </div>
-      <div class="flex-horizontal">
-        <div class="hobbies-mini">
-          <h3>さらに詳しく</h3>
-          <ul>
-            <li>趣味</li>
-            <li>好きな映画、曲、本</li>
-            <li>好きな人</li>
-            <li>将来の夢</li>
-            <li>など...</li>
-          </ul>
-          <a href="#who-am-i" class="link-black">Who am I<i class="fas fa-arrow-down"></i></a>
-        </div>
-        <div class="skills-mini">
-          <h3>スキル</h3>
-          <ul>
-            <li>HTML / CSS (Sass)</li>
-            <li>Photoshop</li>
-            <li>Illustrator...</li>
-            <li class="bold">勉強中</li>
-            <li>Javascript</li>
-            <li>After effect...</li>
-          </ul>
-          <a href="#skills" class="link-black">Skills<i class="fas fa-arrow-down"></i></a>
-        </div>
-      </div>
-
-    </div>
-  </div> -->
 
   <!-- トップページ -->
 
@@ -259,12 +216,6 @@
     </div>
   </div>
 
-  <div class="progress-wrap">
-    <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
-      <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
-      <i class="fas fa-arrow-up" id="progress-wrap-arrow"></i>
-    </svg>
-  </div>
   <!-- スキル -->
 
   <!-- より詳しい自己紹介のページ -->
@@ -364,11 +315,22 @@
     </div>
   </div>
 
+  <!-- Progress Circle -->
+
+  <div class="progress-wrap">
+    <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+      <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
+      <i class="fas fa-arrow-up" id="progress-wrap-arrow"></i>
+    </svg>
+  </div>
+
+  <!-- Progress Circle -->
+
   <!-- フッター -->
 
   <footer class="page-footer">
     <div class="container">
-      <h5 class="white-text center-align">大塚遥輝</h5>
+      <h5 class="white-text center-align">大塚 遥輝</h5>
       <h5 class="white-text">Links</h5>
       <ul>
         <li><a class="white-text" href="#">Top</a></li>
@@ -376,11 +338,10 @@
         <li><a class="white-text" href="#who-am-i">Who am I</a></li>
         <li><a class="white-text" href="#skills">Skills</a></li>
       </ul>
-      <p>Thanks for your time!</p>
     </div>
     <div class="footer-copyright">
       <div class="container center-align">
-        <p>© 2021 大塚遥輝</p>
+        <p>Thanks for your time!</p>
       </div>
     </div>
   </footer>
