--- a/index.html
+++ b/index.html
@@ -106,13 +106,17 @@
     </div>
   </div>
 
+  <div class="hw100 light-blue">
+
+  </div>
+
   <!-- トップページ -->
 
   <div class="row" id="about">
     <div class="section-title white">
       <h2>About</h2>
     </div>
-    <div class="col l3 grey lighten-1">
+    <div class="col l3 xl3 grey lighten-1">
       <div>
         <h5>Skills</h5>
         <ul>
@@ -123,7 +127,7 @@
       </div>
       <!-- <img src="./assets/images/me-circle.jpg" alt="image-of-myself"> -->
     </div>
-    <div class="col l9 white">
+    <div class="col l9 xl9">
       <h3 class="center-align">大塚 遥輝</h3>
       <div>
         <h5>Profile</h5>
@@ -157,66 +161,118 @@
 
   <!-- トップページ -->
 
-  <!-- 実績 -->
-
-  <!-- 実績 -->
-
   <!-- スキル -->
-  <div class="skills" id="skills">
-    <div class="section-title">
-      <h2>Skills</h2>
+  <div class="background-color-skill overflow-hidden" id="skills">
+    <div class="section-title background-color-skill">
+      <h2 class="white-text">Skills</h2>
     </div>
-    <div class="learned">
-      <div class="skill_cards">
-        <div class="skill_card">
-          <h4>HTML/CSS</h4>
-          <p>HTMLとCSSを、HTMQとMDNのサイトを使って独学で勉強しました。CSSについては基本的にSass（なかでもScss）を使って書いています。</p>
-          <a href class="a-button">このサイトのソースコード</a>
-        </div>
-        <div class="skill_card">
-          <h4>Photoshop</h4>
-          <p>PhotoshopVIPというサイトに掲載されているチュートリアルで勉強しました。私が作った作品などはIllustratorを使った作品とまとめてありますのでご覧ください。</p>
+    <h5 class="center-align white-text">私のスキル</h5>
+    <div class="row">
+      <div class="col s12 l6 xl6">
+        <div class="card background-color-skill">
+          <div class="card-content">
+            <span class="card-title text-gold">HTML/CSS</span>
+            <p class="white-text">HTMLとCSSを、HTMQとMDNのサイトを使って独学で勉強しました。CSSについては基本的にSass（なかでもScss）を使って書いています。MaterializeCSSというライブラリがお気に入りです。</p>
+            <a href class="a-button">このサイトのソースコード</a>
+          </div>
         </div>
       </div>
-      <div class="skill_cards">
-        <div class="skill_card">
-          <h4>Illustrator</h4>
-          <p>同じくPhotoshopVIPというサイトに掲載されているチュートリアルで勉強しました。私が作った作品などはPhotoshopを使った作品とまとめてありますのでご覧ください。</p>
-          <a href class="a-button">私が作った作品一覧</a>
-        </div>
-        <div class="skill_card">
-          <h4>WEBサイト運営</h4>
-          <p>受験生を応援するWEBメディア、<a class="link" href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer">ポケット予備校</a>を運営しています。（サムネイル画像は全て私が作成しています）</p>
-          <a href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer" class="a-button">サイトへ</a>
+      <div class="col s12 l6 xl6">
+        <div class="card background-color-skill">
+          <div class="card-content">
+            <span class="card-title text-gold">JavaScript</span>
+            <p class="white-text">Udemyで有料の英語講座を受講して勉強しました。現在はjQueryとReactを勉強しています。</p>
+          </div>
         </div>
       </div>
     </div>
-    <div class="learning">
-      <h3>勉強中、または勉強予定</h3>
-      <div class="skill_cards">
-        <div class="skill_card">
-          <h4>JavaScript</h4>
-          <p>Udemyを使ってJavaScriptを独学で勉強しています。jqueryまで勉強する予定です。</p>
-        </div>
-        <div class="skill_card">
-          <h4>After Effect</h4>
-          <p>モーショングラフィックも好きなので、After Effectも勉強する予定です。</p>
+    <div class="row">
+      <div class="col s12 l6 xl6">
+        <div class="card background-color-skill">
+          <div class="card-content">
+            <span class="card-title text-gold">Illustrator</span>
+            <p class="white-text">同じくPhotoshopVIPというサイトに掲載されているチュートリアルで勉強しました。<a class="link" href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer">ポケット予備校</a>のサムネイル画像は全て私が作っています。</p>
+          </div>
         </div>
       </div>
-      <div class="skill_cards">
-        <div class="skill_card">
-          <h4>Swift</h4>
-          <p>スマホのアプリを作るのは大学生活の夢の一つで、JavaScriptの次に勉強しようと思っています。</p>
+      <div class="col s12 l6 xl6">
+        <div class="card background-color-skill">
+          <div class="card-content">
+            <span class="card-title text-gold">WEBサイト運営</span>
+            <p class="white-text">受験生を応援するWEBメディア、<a class="link" href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer">ポケット予備校</a>を運営しています。2020年の5月に開設して、現在は月に7000ユーザー、12000PVほどに成長させました。</p>
+            <a href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer" class="a-button">サイトへ</a>
+          </div>
         </div>
-        <div class="skill_card">
-          <h4>中国語</h4>
-          <p>ネイティブとスムーズに会話できるように中国語を勉強しています。</p>
+      </div>
+    </div>
+    <h5 class="center-align white-text">勉強中</h5>
+    <div class="row">
+      <div class="col s12 l6 xl6">
+        <div class="card background-color-skill">
+          <div class="card-content">
+            <span class="card-title text-gold">PHP</span>
+            <p class="white-text">Udemyの有料講座を受講して勉強しています。</p>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 l6 xl6">
+        <div class="card background-color-skill">
+          <div class="card-content">
+            <span class="card-title text-gold">SEO</span>
+            <p class="white-text">運営しているサイトをより伸ばすために、SEOや使いやすいWebサイト形成を勉強しています。</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 l6 xl6">
+        <div class="card background-color-skill">
+          <div class="card-content">
+            <span class="card-title text-gold">React</span>
+            <p class="white-text">Academindという海外のオンラインプログラミング講座を受講して勉強しています。</p>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 l6 xl6">
+        <div class="card background-color-skill">
+          <div class="card-content">
+            <span class="card-title text-gold">After Effect</span>
+            <p class="white-text">プログラミングを始めたきっかけはWEBデザインの美しさに感動したからで、自分でももっとリッチな表現ができるようになりたいです。</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 l6 xl6">
+        <div class="card background-color-skill">
+          <div class="card-content">
+            <span class="card-title text-gold">Git</span>
+            <p class="white-text">今は少ししかコマンドが使えないので、もう少し勉強して本格的に使えるよう勉強しています。</p>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 l6 xl6">
+        <div class="card background-color-skill">
+          <div class="card-content">
+            <span class="card-title text-gold">中国語</span>
+            <p class="white-text">ネイティブとスムーズに会話できるように中国語を勉強しています。</p>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
   <!-- スキル -->
+
+  <!-- 実績 -->
+
+  <div class="amber lighten-3 hw100">
+    <div class="section-title amber lighten-3">
+      <h2 class="">Works</h2>
+    </div>
+  </div>
+
+  <!-- 実績 -->
 
   <!-- より詳しい自己紹介のページ -->
 
@@ -230,18 +286,18 @@
         <div class="hobby-card">
           <h4>映画を観る</h4>
           <p>自粛中に映画をたくさん観るようになってから、本格的に映画鑑賞が趣味になりました。異なる世界に入り込める魅力は映画ならではのものだと思います。ハッピー！みたいな映画ももちろん好きですが、深い人間物語の映画の方が心に響きますよね。<br>好きな映画はGod FatherやLEON、RAWなどです。</p>
-          <div class="images-box">
+          <!-- <div class="images-box">
             <a target="_blank" href="https://www.amazon.co.jp/gp/product/B07F5S2H13/ref=as_li_tl?ie=UTF8&camp=247&creative=1211&creativeASIN=B07F5S2H13&linkCode=as2&tag=pokeyobi-22&linkId=8fdcb6d01a2e7a7b79fea9e409536712"><img
                 src="https://ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=JP&ASIN=B07F5S2H13&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=pokeyobi-22"></a>
-          </div>
+          </div> -->
         </div>
         <div class="hobby-card">
           <h4>音楽を聴く</h4>
           <p>一人暮らしのため、家では自由に踊ることができ、よく音楽をかけながら家で好きに踊っています。EDMのような気分の上がる曲から、しんみりとした気分になる曲までかなり幅広く好きです。月の光といったクラシックも好きです。<br>好きな歌手はAviciiやBTS、米津玄師などです。</p>
-          <div class="images-box">
+          <!-- <div class="images-box">
             <a target="_blank" href="https://www.amazon.co.jp/gp/product/B0155VVIX6/ref=as_li_tl?ie=UTF8&camp=247&creative=1211&creativeASIN=B0155VVIX6&linkCode=as2&tag=pokeyobi-22&linkId=16d8b3996de7bf34765d9d5c37dd7df9"><img
                 src="https://ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=JP&ASIN=B0155VVIX6&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=pokeyobi-22"></a>
-          </div>
+          </div> -->
         </div>
 
       </div>
@@ -250,69 +306,69 @@
           <h4>旅行に行く</h4>
           <p>旅行も大好きな趣味の一つです。特に海外旅行が好きで、仲の良い人と異国を旅する時間は本当に素敵な時間です。大学の間にお金を貯めて、思いがけない体験や想像もつかない美しい景色をたくさん味わいに行きたいと思います。<br>好きな国や地域は香港やイタリア、京都などです。他にもギリシア、ロシア、オルドス（中国）などにも行ってみたいです。</p>
           <div class="images-box">
-            <img src="images/hongkong.jpg" alt="">
+            <!-- <img src="images/hongkong.jpg" alt=""> -->
           </div>
         </div>
         <div class="hobby-card">
           <h4>古典を読む</h4>
           <p>古今東西の古典を読むことは高校生の時からの趣味です。人類が書いた本の中でトップクラスの本を読むとき、そんな的を得た表現があるのか、そんな鋭い洞察があるのか、と、人類最高の英知に触れる瞬間に興奮します。<br>好きな本は孫子の兵法、読書について（ショーペンハウアー）、三国志などです。</p>
-          <div class="images-box">
+          <!-- <div class="images-box">
             <div class="images-box">
               <a target="_blank" href="https://www.amazon.co.jp/gp/product/B00QT9X9EK/ref=as_li_tl?ie=UTF8&camp=247&creative=1211&creativeASIN=B00QT9X9EK&linkCode=as2&tag=pokeyobi-22&linkId=30fc6f78d7721fbd8017acc115de98e8"><img
                   src="https://ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=JP&ASIN=B00QT9X9EK&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=pokeyobi-22"></a>
-            </div>
-          </div>
+            </div> -->
         </div>
       </div>
+    </div>
 
-    </div>
-    <div class="fav-people">
-      <h3>好きな人</h3>
-      <div class="person-cards">
-        <div class="person-card">
-          <img src="./assets/images/carsar.jpg" alt="">
-          <h4>カエサル</h4>
-          <p>なんといっても稀代の英雄として尊敬しています。この堂々たる風格に憧れを感じます。</p>
-        </div>
-        <div class="person-card">
-          <img src="./assets/images/mutsu.jpg" alt="">
-          <h4>陸奥宗光</h4>
-          <p>カミソリと言われた頭脳で日本を発展させた点が好きです。盛衰を決めるのは頭脳なのだ、と学んだ人です。</p>
-        </div>
-        <div class="person-card">
-          <img src="./assets/images/natalie.jpg" alt="">
-          <h4>ナタリーポートマン</h4>
-          <p>言わずと知れたマチルダです。大人になってもすごく綺麗で好きです。</p>
-        </div>
-        <div class="person-card">
-          <img src="./assets/images/robert.jpg" alt="">
-          <h4>ロバートパティンソン</h4>
-          <p>TENETを見て、特にスーツ姿に惚れました。自分も将来はあんな風に一張羅で颯爽と歩きたいです。(*1)</p>
-        </div>
-        <div class="person-card">
-          <img src="./assets/images/dilraba.jpg" alt="">
-          <h4>ディリラバ</h4>
-          <p>ウイグル出身の中国の女優ですが、アジアともヨーロッパともつかない、独特の整った顔つきで、本当に綺麗。(*2)</p>
-        </div>
+  </div>
+  <div class="fav-people">
+    <h3>好きな人</h3>
+    <div class="person-cards">
+      <div class="person-card">
+        <!-- <img src="./assets/images/carsar.jpg" alt=""> -->
+        <h4>カエサル</h4>
+        <p>なんといっても稀代の英雄として尊敬しています。この堂々たる風格に憧れを感じます。</p>
+      </div>
+      <div class="person-card">
+        <!-- <img src="./assets/images/mutsu.jpg" alt=""> -->
+        <h4>陸奥宗光</h4>
+        <p>カミソリと言われた頭脳で日本を発展させた点が好きです。盛衰を決めるのは頭脳なのだ、と学んだ人です。</p>
+      </div>
+      <div class="person-card">
+        <!-- <img src="./assets/images/natalie.jpg" alt=""> -->
+        <h4>ナタリーポートマン</h4>
+        <p>言わずと知れたマチルダです。大人になってもすごく綺麗で好きです。</p>
+      </div>
+      <div class="person-card">
+        <!-- <img src="./assets/images/robert.jpg" alt=""> -->
+        <h4>ロバートパティンソン</h4>
+        <p>TENETを見て、特にスーツ姿に惚れました。自分も将来はあんな風に一張羅で颯爽と歩きたいです。(*1)</p>
+      </div>
+      <div class="person-card">
+        <!-- <img src="./assets/images/dilraba.jpg" alt=""> -->
+        <h4>ディリラバ</h4>
+        <p>ウイグル出身の中国の女優ですが、アジアともヨーロッパともつかない、独特の整った顔つきで、本当に綺麗。(*2)</p>
       </div>
     </div>
-    <div class="dream">
-      <h3>将来の夢</h3>
-      <div class="dream-cards">
-        <div class="dream-card">
-          <h4>世界中に家を建てる</h4>
-          <p>世界中の美しい場所に自分の好きなスタイルの家を建てたいです。朝起きるたびに感動するような家を建てたです。具体的には、イタリアの海沿いと香港の摩天楼、そして東京に、広くて物が少ないシンプルな家を建てたいです。</p>
-        </div>
-        <div class="dream-card">
-          <h4>世界中を旅行する</h4>
-          <p>まだまだ世界には見たことのない光景が広がっています。それらをもっともっとたくさん見に行きたいです。また行く先々で、世界中のグルメを堪能したいです。</p>
-        </div>
-        <div class="dream-card">
-          <h4>宇宙に行く</h4>
-          <p>かつての世界旅行がそうであったように、宇宙旅行も将来、安くなると考えています。空の上に何があるのか、地球はどんな姿なのか、自分の目で見てみたいです。</p>
-        </div>
+  </div>
+  <div class="dream">
+    <h3>将来の夢</h3>
+    <div class="dream-cards">
+      <div class="dream-card">
+        <h4>世界中に家を建てる</h4>
+        <p>世界中の美しい場所に自分の好きなスタイルの家を建てたいです。朝起きるたびに感動するような家を建てたです。具体的には、イタリアの海沿いと香港の摩天楼、そして東京に、広くて物が少ないシンプルな家を建てたいです。</p>
+      </div>
+      <div class="dream-card">
+        <h4>世界中を旅行する</h4>
+        <p>まだまだ世界には見たことのない光景が広がっています。それらをもっともっとたくさん見に行きたいです。また行く先々で、世界中のグルメを堪能したいです。</p>
+      </div>
+      <div class="dream-card">
+        <h4>宇宙に行く</h4>
+        <p>かつての世界旅行がそうであったように、宇宙旅行も将来、安くなると考えています。空の上に何があるのか、地球はどんな姿なのか、自分の目で見てみたいです。</p>
       </div>
     </div>
+  </div>
   </div>
 
   <!-- Progress Circle -->
