works and cover animation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-2DS09E77TG"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-
     function gtag() {
       dataLayer.push(arguments);
     }
@@ -106,7 +105,7 @@
     </div>
   </div>
 
-  <div class="hw100 light-blue">
+  <div class="hw100 light-blue overflow-hidden">
 
   </div>
 
@@ -173,7 +172,6 @@
           <div class="card-content">
             <span class="card-title text-gold">HTML/CSS</span>
             <p class="white-text">HTMLとCSSを、HTMQとMDNのサイトを使って独学で勉強しました。CSSについては基本的にSass（なかでもScss）を使って書いています。MaterializeCSSというライブラリがお気に入りです。</p>
-            <a href class="a-button">このサイトのソースコード</a>
           </div>
         </div>
       </div>
@@ -182,6 +180,9 @@
           <div class="card-content">
             <span class="card-title text-gold">JavaScript</span>
             <p class="white-text">Udemyで有料の英語講座を受講して勉強しました。現在はjQueryとReactを勉強しています。</p>
+          </div>
+          <div class="card-action">
+            <a href="https://www.udemy.com/course/javascript-the-complete-guide-2020-beginner-advanced/" target="_blank" rel="noopener noreferrer">受講した講座</a>
           </div>
         </div>
       </div>
@@ -200,7 +201,9 @@
           <div class="card-content">
             <span class="card-title text-gold">WEBサイト運営</span>
             <p class="white-text">受験生を応援するWEBメディア、<a class="link" href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer">ポケット予備校</a>を運営しています。2020年の5月に開設して、現在は月に7000ユーザー、12000PVほどに成長させました。</p>
-            <a href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer" class="a-button">サイトへ</a>
+          </div>
+          <div class="card-action">
+            <a href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer">サイトへ</a>
           </div>
         </div>
       </div>
@@ -230,6 +233,9 @@
           <div class="card-content">
             <span class="card-title text-gold">React</span>
             <p class="white-text">Academindという海外のオンラインプログラミング講座を受講して勉強しています。</p>
+          </div>
+          <div class="card-action">
+            <a href="https://academind.com/" target="_blank" rel="noopener noreferrer">Academind</a>
           </div>
         </div>
       </div>
@@ -266,9 +272,64 @@
 
   <!-- 実績 -->
 
-  <div class="amber lighten-3 hw100">
+  <div class="amber lighten-3 overflow-hidden">
     <div class="section-title amber lighten-3">
       <h2 class="">Works</h2>
+    </div>
+    <div class="row">
+      <div class="col s12 l6 xl6">
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">Webサイト運営</span>
+            <p>2020年の5月に大学の同級生と開設し、8ヶ月経った2021年1月には月のユーザー7000人、PV1万2000を達成しました。</p>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 l6 xl6">
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">家計簿アプリ作成</span>
+            <p>2020年の9月から本格的に勉強し始め、2020年の12月に友人から初案件を受注しました。既存の家計簿アプリが使いにくいから自分好みに作って欲しいという内容で、スマホのSafari上で動くWebアプリを作成しました。</p>
+          </div>
+          <div class="card-action">
+            <a href="https://otsuka-haruki.github.io/maeda-kakeibo/" target="_blank" rel="noopener noreferrer">完成品はこちら（オリジナル家計簿アプリ）</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 l6 xl6">
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">写真編集</span>
+            <p>Webサイト運営で使うくらいのスキルがあったので、2021年の1月に友人から依頼を受けて画像編集をしました。学生証のために証明写真が欲しく、旅行に行った時の写りのいい写真を加工して証明写真の用件に合うようにして欲しいという内容で、Photoshopを使って仕上げました。</p>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 l6 xl6">
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">ダッシュボード作成</span>
+            <p>1日の行動を記録したり、それをグラフ化したり、やることを重要度順に整理して進捗を更新できるようにしたりと、自分の生活であればいいなと思うものを作りました。自分用です。</p>
+          </div>
+          <div class="card-action">
+            <a href="https://otsuka-private.github.io/dashboard/" target="_blank" rel="noopener noreferrer">完成品はこちら（自分用ダッシュボード）</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 l6 xl6">
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">自己紹介サイトの作成</span>
+            <p>採用担当の方や新しく知り合った人などが、簡単に私のことを知れるようにこのサイトを作りました。</p>
+          </div>
+          <div class="card-action">
+            <a href="https://github.com/otsuka-haruki/portfolio" target="_blank" rel="noopener noreferrer">ソースコードはこちらからご覧ください</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
