cover animation modified

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
   <!-- トップページ -->
 
-  <div class="hero row" id="top">
+  <div class="hero row overflow-hidden" id="top">
     <div class="title col s12 l12">
       <h1><span>ようこそ、</span>大塚遥輝の自己紹介サイトへ</h1>
       <p>Hello, Welcome!</p>
