--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-2DS09E77TG"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
+
     function gtag() {
       dataLayer.push(arguments);
     }
@@ -62,6 +63,7 @@
       s.parentNode.insertBefore(tk, s)
     })(document);
   </script>
+  <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="./index.js" defer type="module"></script>
@@ -89,7 +91,7 @@
 
   <!-- トップページ -->
 
-  <div class="hero row overflow-hidden" id="top">
+  <div class="hero row overflow-hidden margin-bottom-0" id="top">
     <div class="title col s12 l12">
       <h1><span>ようこそ、</span>大塚遥輝の自己紹介サイトへ</h1>
       <p>Hello, Welcome!</p>
@@ -117,43 +119,79 @@
     </div>
     <div class="col l3 xl3 grey lighten-1">
       <div>
-        <h5>Skills</h5>
-        <ul>
-          <li>プログラミング</li>
-          <li>Wordpress</li>
-          <li>ライティング</li>
-        </ul>
+        <div class="card">
+          <div class="card-content">
+          <span class="card-title">私のスキル</span>
+          <ul>
+            <li>プログラミング</li>
+            <li>Wordpress</li>
+            <li>ライティング</li>
+            <li>...</li>
+          </ul>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">実績</span>
+            <ul>
+              <li>家計簿アプリ作成</li>
+              <li>Webサイト運営</li>
+              <li>写真編集</li>
+              <li>...</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">趣味</span>
+            <ul>
+              <li>映画を観る</li>
+              <li>音楽を聴く</li>
+              <li>旅行に行く</li>
+              <li>古典を読む</li>
+            </ul>
+          </div>
+        </div>
       </div>
-      <!-- <img src="./assets/images/me-circle.jpg" alt="image-of-myself"> -->
     </div>
     <div class="col l9 xl9">
       <h3 class="center-align">大塚 遥輝</h3>
-      <div>
-        <h5>Profile</h5>
-        <p>私は東京大学の2年生で、文学部の美術史学科に所属しています。普段は大学の勉強の他に、プログラミングとWEBデザインの勉強、そしてサイト運営（<a class="link" href="https://pokeyobi.jp">ポケット予備校</a>）などを行っています。日本と中国（北京系）とカナダとのハーフです。</p>
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title">Profile</span>
+          <p>私は東京大学の2年生で、文学部の美術史学科に所属しています。普段は大学の勉強の他に、プログラミングとWEBデザインの勉強、そしてサイト運営（<a class="link" href="https://pokeyobi.jp">ポケット予備校</a>）などを行っています。日本と中国（北京系）とカナダとのハーフです。</p>
+        </div>
       </div>
-      <div>
-        <h5>経歴</h5>
-        <p>2000年に滋賀県で生まれ、大学進学を機に東京にやって来ました。</p>
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title">経歴</span>
+          <p>2000年に滋賀県で生まれ、大学進学を機に東京にやって来ました。</p>
+        </div>
       </div>
-      <div>
-        <h5>職歴など</h5>
-        <p>2015年ごろからFXを始めました。15万円から初めて、2年くらいゆっくりと続けて17万円を超えるくらいになりました。</p>
-        <p>2017年ごろ 学校の前で塾などが消しゴム入りのパンフレットを配っていたので、それを貯めてリサイクルショップで売ってお金を稼ぎました。１つ10円くらいでした。</p>
-        <p>2019 大学進学後は、家庭教師といった典型的なアルバイトだけでなく、建築現場や夜間の倉庫などのお仕事も10件ほどやりました。</p>
-        <p>2020 WEBサイト「ポケット予備校」を始めてからはアドセンス広告やアマゾンアフィリエイトなどで収入を作るようになりました。</p>
-        <p>2021 プログラミングや簡単なWEBデザインの技術をつけてからは、友人から依頼を受けて細かな作業をこなしたりしています。一例として家計簿アプリを作ったり、旅行写真をPhotoshopで証明写真用の画像に加工したりしていくらかのお金を頂いたりしています。</p>
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title">職歴など</span>
+          <p>2015年ごろからFXを始めました。15万円から初めて、2年くらいゆっくりと続けて17万円を超えるくらいになりました。</p>
+          <p>2017年ごろ 学校の前で塾などが消しゴム入りのパンフレットを配っていたので、それを貯めてリサイクルショップで売ってお金を稼ぎました。１つ10円くらいでした。</p>
+          <p>2019 大学進学後は、家庭教師といった典型的なアルバイトだけでなく、建築現場や夜間の倉庫などのお仕事も10件ほどやりました。</p>
+          <p>2020 WEBサイト「ポケット予備校」を始めてからはアドセンス広告やアマゾンアフィリエイトなどで収入を作るようになりました。</p>
+          <p>2021 プログラミングや簡単なWEBデザインの技術をつけてからは、友人から依頼を受けて細かな作業をこなしたりしています。一例として家計簿アプリを作ったり、旅行写真をPhotoshopで証明写真用の画像に加工したりしていくらかのお金を頂いたりしています。</p>
+        </div>
       </div>
-      <div>
-        <h5>過去の活動や取材歴</h5>
-        <p>2017年 エコノミクス甲子園 全国大会準々決勝進出</p>
-        <p>2018年 テレビ東京 モーニングサテライト 出演</p>
-        <p>2020年 東京大学新聞 企画「キャンパスの人」に取り上げられました</p>
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title">過去の活動や取材歴</span>
+          <p>2017年 エコノミクス甲子園 全国大会準々決勝進出</p>
+          <p>2018年 テレビ東京 モーニングサテライト 出演</p>
+          <p>2020年 東京大学新聞 企画「キャンパスの人」に取り上げられました</p>
+        </div>
       </div>
-      <div>
-        <h5>資格など</h5>
-        <p>2015年 TOEIC825点</p>
-        <p>2021年 基礎情報技術者試験（勉強中）</p>
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title">資格など</span>
+          <p>2015年 TOEIC825点</p>
+          <p>2021年 基礎情報技術者試験（勉強中）</p>
+        </div>
       </div>
     </div>
   </div>
@@ -163,9 +201,8 @@
   <!-- スキル -->
   <div class="background-color-skill overflow-hidden" id="skills">
     <div class="section-title background-color-skill">
-      <h2 class="white-text">Skills</h2>
+      <h2 class="white-text">私のスキル</h2>
     </div>
-    <h5 class="center-align white-text">私のスキル</h5>
     <div class="row">
       <div class="col s12 l6 xl6">
         <div class="card background-color-skill">
@@ -272,9 +309,9 @@
 
   <!-- 実績 -->
 
-  <div class="amber lighten-3 overflow-hidden">
+  <div class="amber lighten-3 overflow-hidden" id="works">
     <div class="section-title amber lighten-3">
-      <h2 class="">Works</h2>
+      <h2 class="">実績</h2>
     </div>
     <div class="row">
       <div class="col s12 l6 xl6">
@@ -337,99 +374,71 @@
 
   <!-- より詳しい自己紹介のページ -->
 
-  <div class="who-am-i" id="who-am-i">
+  <div class="teal lighten-3 overflow-hidden margin-bottom-0" id="who-am-i">
     <div class="section-title">
       <h2>Who am I</h2>
     </div>
-    <div class="hobbies">
-      <h3>趣味</h3>
-      <div class="hobby-cards">
-        <div class="hobby-card">
-          <h4>映画を観る</h4>
-          <p>自粛中に映画をたくさん観るようになってから、本格的に映画鑑賞が趣味になりました。異なる世界に入り込める魅力は映画ならではのものだと思います。ハッピー！みたいな映画ももちろん好きですが、深い人間物語の映画の方が心に響きますよね。<br>好きな映画はGod FatherやLEON、RAWなどです。</p>
-          <!-- <div class="images-box">
-            <a target="_blank" href="https://www.amazon.co.jp/gp/product/B07F5S2H13/ref=as_li_tl?ie=UTF8&camp=247&creative=1211&creativeASIN=B07F5S2H13&linkCode=as2&tag=pokeyobi-22&linkId=8fdcb6d01a2e7a7b79fea9e409536712"><img
-                src="https://ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=JP&ASIN=B07F5S2H13&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=pokeyobi-22"></a>
-          </div> -->
-        </div>
-        <div class="hobby-card">
-          <h4>音楽を聴く</h4>
-          <p>一人暮らしのため、家では自由に踊ることができ、よく音楽をかけながら家で好きに踊っています。EDMのような気分の上がる曲から、しんみりとした気分になる曲までかなり幅広く好きです。月の光といったクラシックも好きです。<br>好きな歌手はAviciiやBTS、米津玄師などです。</p>
-          <!-- <div class="images-box">
-            <a target="_blank" href="https://www.amazon.co.jp/gp/product/B0155VVIX6/ref=as_li_tl?ie=UTF8&camp=247&creative=1211&creativeASIN=B0155VVIX6&linkCode=as2&tag=pokeyobi-22&linkId=16d8b3996de7bf34765d9d5c37dd7df9"><img
-                src="https://ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=JP&ASIN=B0155VVIX6&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=pokeyobi-22"></a>
-          </div> -->
-        </div>
-
-      </div>
-      <div class="hobby-cards">
-        <div class="hobby-card">
-          <h4>旅行に行く</h4>
-          <p>旅行も大好きな趣味の一つです。特に海外旅行が好きで、仲の良い人と異国を旅する時間は本当に素敵な時間です。大学の間にお金を貯めて、思いがけない体験や想像もつかない美しい景色をたくさん味わいに行きたいと思います。<br>好きな国や地域は香港やイタリア、京都などです。他にもギリシア、ロシア、オルドス（中国）などにも行ってみたいです。</p>
-          <div class="images-box">
-            <!-- <img src="images/hongkong.jpg" alt=""> -->
+    <h5 class="center-align">趣味</h5>
+    <div class="row">
+      <div class="col s12 l6 xl6">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="https://images.unsplash.com/photo-1524712245354-2c4e5e7121c0?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2689&q=80">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">映画を観る<i class="right fas fa-chevron-up"></i></span>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">映画を観る<i class="right fas fa-chevron-down"></i></span>
+            <p>自粛中に映画をたくさん観るようになってから、本格的に映画鑑賞が趣味になりました。異なる世界に入り込める魅力は映画ならではのものだと思います。ハッピー！みたいな映画ももちろん好きですが、深い人間物語の映画の方が心に響きますよね。<br>好きな映画はGod FatherやLEON、フランスのRAWなどです。</p>
           </div>
         </div>
-        <div class="hobby-card">
-          <h4>古典を読む</h4>
-          <p>古今東西の古典を読むことは高校生の時からの趣味です。人類が書いた本の中でトップクラスの本を読むとき、そんな的を得た表現があるのか、そんな鋭い洞察があるのか、と、人類最高の英知に触れる瞬間に興奮します。<br>好きな本は孫子の兵法、読書について（ショーペンハウアー）、三国志などです。</p>
-          <!-- <div class="images-box">
-            <div class="images-box">
-              <a target="_blank" href="https://www.amazon.co.jp/gp/product/B00QT9X9EK/ref=as_li_tl?ie=UTF8&camp=247&creative=1211&creativeASIN=B00QT9X9EK&linkCode=as2&tag=pokeyobi-22&linkId=30fc6f78d7721fbd8017acc115de98e8"><img
-                  src="https://ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=JP&ASIN=B00QT9X9EK&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=pokeyobi-22"></a>
-            </div> -->
+      </div>
+      <div class="col s12 l6 xl6">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">音楽を聴く<i class="right fas fa-chevron-up"></i></span>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">音楽を聴く<i class="right fas fa-chevron-down"></i></span>
+            <p>一人暮らしのため、家ではテレビでYoutubeを流して楽しんでいます。EDMのような気分の上がる曲から、しんみりとした気分になる曲までかなり幅広く好きです。月の光といったクラシックも好きです。<br>好きな歌手はAviciiやAdo、Ayaseなどです。</p>
+          </div>
         </div>
       </div>
     </div>
-
-  </div>
-  <div class="fav-people">
-    <h3>好きな人</h3>
-    <div class="person-cards">
-      <div class="person-card">
-        <!-- <img src="./assets/images/carsar.jpg" alt=""> -->
-        <h4>カエサル</h4>
-        <p>なんといっても稀代の英雄として尊敬しています。この堂々たる風格に憧れを感じます。</p>
+    <div class="row">
+      <div class="col s12 l6 xl6">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="https://images.unsplash.com/photo-1508672019048-805c876b67e2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1993&q=80">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">旅行に行く<i class="right fas fa-chevron-up"></i></span>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">旅行に行く<i class="right fas fa-chevron-down"></i></span>
+            <p>旅行も大好きな趣味の一つです。特に海外旅行が好きで、仲の良い人と異国を旅する時間は本当に素敵な時間です。大学の間にお金を貯めて、思いがけない体験や想像もつかない美しい景色をたくさん味わいに行きたいと思います。<br>好きな国や地域は香港やイタリア、京都などです。他にもギリシア、ロシア、オルドス（中国）などにも行ってみたいです。</p>
+          </div>
+        </div>
       </div>
-      <div class="person-card">
-        <!-- <img src="./assets/images/mutsu.jpg" alt=""> -->
-        <h4>陸奥宗光</h4>
-        <p>カミソリと言われた頭脳で日本を発展させた点が好きです。盛衰を決めるのは頭脳なのだ、と学んだ人です。</p>
-      </div>
-      <div class="person-card">
-        <!-- <img src="./assets/images/natalie.jpg" alt=""> -->
-        <h4>ナタリーポートマン</h4>
-        <p>言わずと知れたマチルダです。大人になってもすごく綺麗で好きです。</p>
-      </div>
-      <div class="person-card">
-        <!-- <img src="./assets/images/robert.jpg" alt=""> -->
-        <h4>ロバートパティンソン</h4>
-        <p>TENETを見て、特にスーツ姿に惚れました。自分も将来はあんな風に一張羅で颯爽と歩きたいです。(*1)</p>
-      </div>
-      <div class="person-card">
-        <!-- <img src="./assets/images/dilraba.jpg" alt=""> -->
-        <h4>ディリラバ</h4>
-        <p>ウイグル出身の中国の女優ですが、アジアともヨーロッパともつかない、独特の整った顔つきで、本当に綺麗。(*2)</p>
-      </div>
-    </div>
-  </div>
-  <div class="dream">
-    <h3>将来の夢</h3>
-    <div class="dream-cards">
-      <div class="dream-card">
-        <h4>世界中に家を建てる</h4>
-        <p>世界中の美しい場所に自分の好きなスタイルの家を建てたいです。朝起きるたびに感動するような家を建てたです。具体的には、イタリアの海沿いと香港の摩天楼、そして東京に、広くて物が少ないシンプルな家を建てたいです。</p>
-      </div>
-      <div class="dream-card">
-        <h4>世界中を旅行する</h4>
-        <p>まだまだ世界には見たことのない光景が広がっています。それらをもっともっとたくさん見に行きたいです。また行く先々で、世界中のグルメを堪能したいです。</p>
-      </div>
-      <div class="dream-card">
-        <h4>宇宙に行く</h4>
-        <p>かつての世界旅行がそうであったように、宇宙旅行も将来、安くなると考えています。空の上に何があるのか、地球はどんな姿なのか、自分の目で見てみたいです。</p>
+      <div class="col s12 l6 xl6">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="https://images.unsplash.com/photo-1505664194779-8beaceb93744?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">古典を読む<i class="right fas fa-chevron-up"></i></span>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">古典を読む<i class="right fas fa-chevron-down"></i></span>
+            <p>古今東西の古典を読むことは高校生の時からの趣味です。人類が書いた本の中でトップクラスの本を読むとき、そんな上手な表現があるのか、そんな鋭い洞察があるのか、と、人類最高の英知に触れる瞬間に興奮します。<br>好きな本は孫子の兵法、読書について（ショーペンハウアー）、三国志などです。</p>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
   </div>
 
   <!-- Progress Circle -->
@@ -445,15 +454,15 @@
 
   <!-- フッター -->
 
-  <footer class="page-footer">
-    <div class="container">
+  <footer class="page-footer blue-grey darken-4">
+    <div class="container row">
       <h5 class="white-text center-align">大塚 遥輝</h5>
-      <h5 class="white-text">Links</h5>
-      <ul>
+      <ul class="col s12 l12 xl12 flex flex-space-around">
         <li><a class="white-text" href="#">Top</a></li>
         <li><a class="white-text" href="#about">About</a></li>
-        <li><a class="white-text" href="#who-am-i">Who am I</a></li>
         <li><a class="white-text" href="#skills">Skills</a></li>
+        <li><a class="white-text" href="#works">Works</a></li>
+        <li><a class="white-text" href="#who-am-i">Who am I</a></li>
       </ul>
     </div>
     <div class="footer-copyright">
