mobile about card modified

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
     </div>
     <div class="col l3 xl3 grey lighten-2 height-100-percent" id="about__left">
       <div>
-        <a href="#about" class="hide-in-desktop">
-          <div class="card">
+        <a href="#about">
+          <div class="card hide-in-desktop">
             <div class="card-content center-align image-child-width-85-percent">
               <img src="./assets/images/me-circle-black.png" alt="me" class="image-width-90-percent">
               <h5 class="center-align">こんにちは！</h5>
@@ -123,7 +123,7 @@
           </div>
         </a>
         <a href="#about">
-          <div class="card hover-translate-x">
+          <div class="card hover-translate-x hide-in-smart-phone">
             <div class="card-content center-align image-child-width-85-percent">
               <img src="./assets/images/me-circle-black.png" alt="me" class="image-width-90-percent">
               <h5 class="center-align">こんにちは！</h5>
