--- a/index.html
+++ b/index.html
@@ -114,14 +114,12 @@
     </div>
     <div class="col l3 xl3 grey lighten-2 height-100-percent" id="about__left">
       <div>
-        <a href="#about">
-          <div class="card hide-in-desktop">
-            <div class="card-content center-align image-child-width-85-percent">
-              <img src="./assets/images/me-circle-black.png" alt="me" class="image-width-90-percent">
-              <h5 class="center-align">こんにちは！</h5>
-            </div>
+        <div class="card hide-in-desktop">
+          <div class="card-content center-align image-child-width-85-percent">
+            <img src="./assets/images/me-circle-black.png" alt="me" class="image-width-90-percent">
+            <h5 class="center-align">こんにちは！</h5>
           </div>
-        </a>
+        </div>
         <a href="#about">
           <div class="card hover-translate-x hide-in-smart-phone">
             <div class="card-content center-align image-child-width-85-percent">
@@ -256,37 +254,37 @@
     </div>
     <div class="row">
       <div class="col s12 l6 xl6">
-        <div class="card background-color-skill">
+        <div class="card blue-grey darken-2">
           <div class="card-image">
-            <img src="https://images.unsplash.com/photo-1523800503107-5bc3ba2a6f81?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80">
-            <span class="card-title text-gold">WEBサイト運営</span>
+            <img src="./assets/images/typing.webp">
           </div>
           <div class="card-content">
-            <p class="white-text">受験生を応援するWEBメディア、<a class="link" href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer">ポケット予備校</a>を運営しています。2020年の5月に開設して、現在は月に7000ユーザー、12000PVほどに成長させました。</p>
+            <span class="card-title text-gold">WEBサイト運営</span>
+            <p class="white-text">受験生を応援するWEBメディア、<a class="link" href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer">ポケット予備校</a>を運営しています。2020年の5月に開設して、現在は月に8000ユーザー、14000PVほどに成長させました。</p>
           </div>
           <div class="card-action">
-            <a href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer">サイトへ</a>
+            <a href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer" class="waves-effect waves-light btn blue-grey">サイトへ</a>
           </div>
         </div>
       </div>
       <div class="col s12 l6 xl6">
-        <div class="card background-color-skill">
+        <div class="card blue-grey darken-2">
           <div class="card-image">
-            <img src="https://images.unsplash.com/photo-1523800503107-5bc3ba2a6f81?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80">
-            <span class="card-title text-gold">JavaScript</span>
+            <img src="./assets/images/pc_programming.webp">
           </div>
           <div class="card-content">
+            <span class="card-title text-gold">JavaScript</span>
             <p class="white-text">Udemyで有料の英語講座を受講して勉強しました。現在はjQueryとReactを勉強しています。</p>
           </div>
           <div class="card-action">
-            <a href="https://www.udemy.com/course/javascript-the-complete-guide-2020-beginner-advanced/" target="_blank" rel="noopener noreferrer">受講した講座</a>
+            <a href="https://www.udemy.com/course/javascript-the-complete-guide-2020-beginner-advanced/" target="_blank" rel="noopener noreferrer" class="waves-effect waves-light btn blue-grey">受講した講座</a>
           </div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col s12 l6 xl6">
-        <div class="card background-color-skill">
+        <div class="card blue-grey darken-2">
           <div class="card-content">
             <span class="card-title text-gold">Illustrator</span>
             <p class="white-text">同じくPhotoshopVIPというサイトに掲載されているチュートリアルで勉強しました。<a class="link" href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer">ポケット予備校</a>のサムネイル画像は全て私が作っています。</p>
@@ -294,7 +292,7 @@
         </div>
       </div>
       <div class="col s12 l6 xl6">
-        <div class="card background-color-skill">
+        <div class="card blue-grey darken-2">
           <div class="card-content">
             <span class="card-title text-gold">HTML/CSS</span>
             <p class="white-text">HTMQとMDNのサイトを使って独学で勉強しました。CSSについては基本的にSass（なかでもScss）を使って書いています。MaterializeCSSというライブラリがお気に入りです。</p>
@@ -305,15 +303,21 @@
     <h5 class="center-align white-text">勉強中</h5>
     <div class="row">
       <div class="col s12 l6 xl6">
-        <div class="card background-color-skill">
+        <div class="card blue-grey darken-2">
+          <div class="card-image">
+            <img src="./assets/images/money.webp">
+          </div>
           <div class="card-content">
-            <span class="card-title text-gold">PHP</span>
-            <p class="white-text">Udemyの有料講座を受講して勉強しています。</p>
+            <span class="card-title text-gold">サイトマネタイズ</span>
+            <p class="white-text">自分のやっているサイトがある程度の規模になったので、マネタイズを検討しはじめています。さまざまな方法を検証していきたいです。</p>
           </div>
         </div>
       </div>
       <div class="col s12 l6 xl6">
-        <div class="card background-color-skill">
+        <div class="card blue-grey darken-2">
+          <div class="card-image">
+            <img src="./assets/images/analytics.webp">
+          </div>
           <div class="card-content">
             <span class="card-title text-gold">SEO</span>
             <p class="white-text">運営しているサイトをより伸ばすために、SEOや使いやすいWebサイト形成を勉強しています。</p>
@@ -323,36 +327,36 @@
     </div>
     <div class="row">
       <div class="col s12 l6 xl6">
-        <div class="card background-color-skill">
+        <div class="card blue-grey darken-2">
           <div class="card-content">
             <span class="card-title text-gold">React</span>
             <p class="white-text">Academindという海外のオンラインプログラミング講座を受講して勉強しています。</p>
           </div>
           <div class="card-action">
-            <a href="https://academind.com/" target="_blank" rel="noopener noreferrer">Academind</a>
+            <a href="https://academind.com/" target="_blank" rel="noopener noreferrer" class="waves-effect waves-light btn blue-grey">Academind</a>
           </div>
         </div>
       </div>
       <div class="col s12 l6 xl6">
-        <div class="card background-color-skill">
+        <div class="card blue-grey darken-2">
           <div class="card-content">
-            <span class="card-title text-gold">After Effect</span>
-            <p class="white-text">プログラミングを始めたきっかけはWEBデザインの美しさに感動したからで、自分でももっとリッチな表現ができるようになりたいです。</p>
+            <span class="card-title text-gold">PHP</span>
+            <p class="white-text">Udemyの有料講座を受講して勉強しています。</p>
           </div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col s12 l6 xl6">
-        <div class="card background-color-skill">
+        <div class="card blue-grey darken-2">
           <div class="card-content">
             <span class="card-title text-gold">Git</span>
-            <p class="white-text">今は少ししかコマンドが使えないので、もう少し勉強して本格的に使えるよう勉強しています。</p>
+            <p class="white-text">今は少ししかコマンドが使えないので、もう少し本格的に使えるよう勉強しています。</p>
           </div>
         </div>
       </div>
       <div class="col s12 l6 xl6">
-        <div class="card background-color-skill">
+        <div class="card blue-grey darken-2">
           <div class="card-content">
             <span class="card-title text-gold">中国語</span>
             <p class="white-text">ネイティブとスムーズに会話できるように中国語を勉強しています。</p>
@@ -386,7 +390,7 @@
             <p>2020年の9月から本格的に勉強し始め、2020年の12月に友人から初案件を受注しました。既存の家計簿アプリが使いにくいから自分好みに作って欲しいという内容で、スマホのSafari上で動くWebアプリを作成しました。</p>
           </div>
           <div class="card-action">
-            <a href="https://otsuka-haruki.github.io/maeda-kakeibo/" target="_blank" rel="noopener noreferrer">完成品はこちら（オリジナル家計簿アプリ）</a>
+            <a href="https://otsuka-haruki.github.io/maeda-kakeibo/" target="_blank" rel="noopener noreferrer" class="waves-light btn orange lighten-2">完成品はこちら</a>
           </div>
         </div>
       </div>
@@ -407,7 +411,7 @@
             <p>1日の行動を記録したり、それをグラフ化したり、やることを重要度順に整理して進捗を更新できるようにしたりと、自分の生活であればいいなと思うものを作りました。自分用です。</p>
           </div>
           <div class="card-action">
-            <a href="https://otsuka-private.github.io/dashboard/" target="_blank" rel="noopener noreferrer">完成品はこちら（自分用ダッシュボード）</a>
+            <a href="https://otsuka-private.github.io/dashboard/" target="_blank" rel="noopener noreferrer" class="waves-light btn orange lighten-2">完成品はこちら</a>
           </div>
         </div>
       </div>
@@ -420,7 +424,7 @@
             <p>採用担当の方や新しく知り合った人などが、簡単に私のことを知れるようにこのサイトを作りました。</p>
           </div>
           <div class="card-action">
-            <a href="https://github.com/otsuka-haruki/portfolio" target="_blank" rel="noopener noreferrer">ソースコードはこちらからご覧ください</a>
+            <a href="https://github.com/otsuka-haruki/portfolio" target="_blank" rel="noopener noreferrer" class="waves-light btn orange lighten-2">ソースコード</a>
           </div>
         </div>
       </div>
