--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
   </script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.js"></script>
+  <script src="https:////cdn.jsdelivr.net/npm/vivus@latest/dist/vivus.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="./index.js" defer type="module"></script>
@@ -81,6 +82,9 @@
   <!-- カバー -->
   <div id="cover">
     <p></p>
+    <div id="test-svg">
+
+    </div>
     <!-- <div class="progress">
       <div class="determinate" id="test"></div>
     </div> -->
