images and design

--- a/index.html
+++ b/index.html
@@ -153,10 +153,11 @@
           </div>
         </div>
         <a href="#about">
-          <div class="card hover-translate-x hide-in-smart-phone">
+          <div class="card hover-translate-x hide-on-smartphone">
             <div class="card-content center-align image-child-width-85-percent">
               <img src="./assets/images/me-circle.webp" alt="me" class="image-width-90-percent">
               <h5 class="center-align">こんにちは！</h5>
+              <i class="fas fa-chevron-right right hide-on-smartphone"></i>
             </div>
           </div>
         </a>
@@ -187,7 +188,7 @@
             </div>
           </a>
         </div>
-        <div class="hide-in-smart-phone">
+        <div class="hide-on-smartphone">
           <a href="#skills">
             <div class="card hover-translate-y-down">
               <div class="card-content">
@@ -198,6 +199,7 @@
                   <li>ライティング</li>
                   <li>...</li>
                 </ul>
+                <i class="fas fa-chevron-down right"></i>
               </div>
             </div>
           </a>
@@ -210,6 +212,7 @@
                   <li>WEBアプリ作成</li>
                   <li>...</li>
                 </ul>
+                 <i class="fas fa-chevron-down right"></i>
               </div>
             </div>
           </a>
@@ -222,6 +225,7 @@
                   <li>旅行に行く</li>
                   <li>...</li>
                 </ul>
+                <i class="fas fa-chevron-down right"></i>
               </div>
             </div>
           </a>
@@ -292,7 +296,7 @@
           </div>
           <div class="card-content">
             <span class="card-title text-gold">WEBサイト運営</span>
-            <p class="white-text">受験生を応援するWEBメディア、<a class="link" href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer">ポケット予備校</a>を運営しています。2020年の5月に開設して、現在は月に8000ユーザー、14000PVほどに成長させました。</p>
+            <p class="white-text">受験生を応援するWEBメディア、<a class="link" href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer">ポケット予備校</a>を運営しています。2020年の5月に開設して、現在は月に8000ユーザー、15000PVほどに成長させました。</p>
           </div>
           <div class="card-action">
             <a href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer">サイトへ</a>
@@ -409,20 +413,29 @@
     <div class="row">
       <div class="col s12 l6 xl6">
         <div class="card">
+          <div class="card-image">
+            <img src="./assets/images/pokeyobi.png">
+          </div>
           <div class="card-content">
             <span class="card-title">Webサイト運営</span>
-            <p>2020年の5月に大学の同級生と開設し、8ヶ月経った2021年1月には月のユーザー8000人、PV1万4000を達成しました。</p>
+            <p>2020年の5月に大学の同級生と開設し、8ヶ月経った2021年1月には月のユーザー8000人、PV1万5000を達成しました。ここからまだまだ伸ばしていくつもりです。</p>
+          </div>
+          <div class="card-action">
+            <a href="https://pokeyobi.jp" target="_blank" rel="noopener noreferrer">サイトへ</a>
           </div>
         </div>
       </div>
       <div class="col s12 l6 xl6">
         <div class="card">
+          <div class="card-image">
+            <img src="./assets/images/kakeibo.png">
+          </div>
           <div class="card-content">
             <span class="card-title">家計簿アプリ作成</span>
-            <p>2020年の9月から本格的に勉強し始め、2020年の12月に友人から初案件を受注しました。既存の家計簿アプリが使いにくいから自分好みに作って欲しいという内容で、スマホのSafari上で動くWebアプリを作成しました。</p>
+            <p>2020年の9月から本格的に勉強し始め、2020年の12月に友人から初案件を受注しました。既存の家計簿アプリが使いにくいから自分好みに作って欲しいという内容でした。そこで私がコードを書いて、スマホのSafari上で動くWebアプリを作成しました。</p>
           </div>
           <div class="card-action">
-            <a href="https://otsuka-haruki.github.io/maeda-kakeibo/" target="_blank" rel="noopener noreferrer">完成品はこちら</a>
+            <a href="https://otsuka-haruki.github.io/kakeibo-app/" target="_blank" rel="noopener noreferrer">完成品はこちら</a>
           </div>
         </div>
       </div>
@@ -596,7 +609,7 @@
             <span class="card-title activator grey-text text-darken-4">アメリカという国の仕組みが最強な件<i class="right fas fa-chevron-up"></i></span>
           </div>
           <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">アメリカという国の仕組みが最強な件<i class="right fas fa-chevron-down"></i></span>
+            <span class="card-title grey-text text-darken-4">アメリカという最強な仕組み<i class="right fas fa-chevron-down"></i></span>
             <p>
               大学で、アメリカの移民の歴史の授業を取りましたが、やっぱりアメリカは最強だなと感じました。アメリカは移民の国で、広く移民を受け入れてきました。と同時に、アメリカは世界で最も正義を重視する国だとも思います。自ら奴隷を解放したのは歴史上アメリカだけ、と言われるように、人種、ジェンダー、あらゆることで正義を開いてきたのは常にアメリカです。そして決定的なのは、このような土壌があるから、世界中から優秀な人が集まるということです。第二の母国である中国も最近頑張ってるみたいですが、監視される弾圧的な中国と、自由で正義を重視するアメリカ、どちらに行きたいかとなれば人がアメリカを選ぶのは当然です。<br>友人にハーバードの学生がいますが、やっぱり東大生よりずっと優秀だと感じました。彼は東大にも受かりましたが、結局アメリカを選びました。優秀な人材を惹きつける、アメリカの強さはそういうところだと思います。それぞれの国の最も優秀な人がみんなアメリカに移ったら、他の国には勝ちようがないのは明白です。<br>移民（優秀な人）を受け入れるシステム、彼らが来たいと思う土壌、これがあるから、アメリカは最強なのだと考えます。
             </p>
@@ -628,7 +641,7 @@
         <li><a class="white-text" href="#more">More about</a></li>
       </ul>
     </div>
-    <div class="footer-copyright">
+    <div class="footer-copyright grey darken-4">
       <div class="container center-align">
         <p>Thanks for your time!</p>
       </div>
